Bug 153926 - FORMATTING: CRASH when trying to change language for selection
Summary: FORMATTING: CRASH when trying to change language for selection
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: high critical
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-03-02 15:55 UTC by Rainer Bielefeld Retired
Modified: 2023-03-03 13:58 UTC (History)
2 users (show)

See Also:
Crash report or crash signature: 40f007a6-f4b6-40d2-bf67-2d8e727b7f69


Attachments
Sample Document (12.43 KB, application/vnd.oasis.opendocument.text)
2023-03-02 15:55 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2023-03-02 15:55:46 UTC
Created attachment 185704 [details]
Sample Document

Steps how to reproduce with Server Installation of Version: 7.6.0.0.alpha0+ (X86_64) 
Build ID: ab20dba30769a5a52830220daa347772485db6a2
CPU threads: 12; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE – Special new User Profile for testing:

1. Open attached sample document
2. Using mouse select "Added Tests with .... (fixed):"
3. Menu  ˋTools → Language → For Selection → Germanˊ
   » CRASH 😥
Comment 1 Xisco Faulí 2023-03-02 16:18:40 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2023-02-21 15:05:37 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2023-02-22 13:24:47 +0000
commit 5032262fccd0ef7f274323ae481b3230ffd42d3a (patch)
tree 5f8c69e47764a907faf497c1c6932cf3962e3ddb
parent 47cd9b65efa662719950866ab9c45fb3f130e1b4 (diff)
BaseMutex->std::mutex in PopupMenuControllerBase

Bisected with: bibisect-linux64-7.6

Adding Cc: to Noel Grandin
Comment 2 Commit Notification 2023-03-03 08:10:18 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5c4d4b370d2f6645c797c626d407013702f474c7

tdf#153926 crash when trying to change language for selection

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.