tdf#153926 crash when trying to change language for selection

regression from
    commit 5032262fccd0ef7f274323ae481b3230ffd42d3a
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Tue Feb 21 15:05:37 2023 +0200
    BaseMutex->std::mutex in PopupMenuControllerBase

Change-Id: I46b6458a809659845de26059fcab4772e5089ce6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148161
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>